-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 17
-
Component/s: hotspot
-
b13
Test compiler/jvmci/compilerToVM/IsMatureTest.java intermittently fails with
java.lang.RuntimeException: Unexpected isMature state for multiple times invoked method: expected false to equal true
at jdk.test.lib.Asserts.fail(Asserts.java:594)
at jdk.test.lib.Asserts.assertEquals(Asserts.java:205)
at jdk.test.lib.Asserts.assertEQ(Asserts.java:178)
at compiler.jvmci.compilerToVM.IsMatureTest.test(IsMatureTest.java:84)
at compiler.jvmci.compilerToVM.IsMatureTest.main(IsMatureTest.java:60)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:567)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
at java.base/java.lang.Thread.run(Thread.java:835)
java.lang.RuntimeException: Unexpected isMature state for multiple times invoked method: expected false to equal true
at jdk.test.lib.Asserts.fail(Asserts.java:594)
at jdk.test.lib.Asserts.assertEquals(Asserts.java:205)
at jdk.test.lib.Asserts.assertEQ(Asserts.java:178)
at compiler.jvmci.compilerToVM.IsMatureTest.test(IsMatureTest.java:84)
at compiler.jvmci.compilerToVM.IsMatureTest.main(IsMatureTest.java:60)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:567)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
at java.base/java.lang.Thread.run(Thread.java:835)
- relates to
-
JDK-8266988 compiler/jvmci/compilerToVM/IsMatureTest.java fails with Unexpected isMature state for multiple times invoked method: expected false to equal true
-
- Resolved
-
-
JDK-8251462 Simplify compilation policy
-
- Resolved
-
-
JDK-8288970 G1 does not keep weak nmethod oops alive
-
- Closed
-
-
JDK-8264903 2-3x slowdown when executing with -Xcomp after JDK-8219555
-
- Closed
-
(1 links to)